syntax = "proto3";

option go_package="./pd;pd";

import "laptop_message.proto";
import "filter_message.proto";

// CreateLaptopRequest 创建Laptop的request消息
message CreateLaptopRequest { Laptop laptop = 1; }

message CreateLaptopResponse { string id = 1; }

message SearchLaptopRequest { Filter filter = 1; }

message SearchLaptopResponse { Laptop laptop = 1; }

service LaptopService {
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};

  rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse) {};
}
